fixing style connexion mobile

--- a/frontend/src/styles/_connexion.scss
+++ b/frontend/src/styles/_connexion.scss
@@ -52,4 +52,5 @@
 }
 .co-questions {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  margin: 0;
 }
